...
    object CameraPreview {
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
...
      const val RECIPE_IMAGE_TEST_TAG = "recipeImage"
      const val RECIPE_TITLE_TEST_TAG = "recipeTitle"
      const val RECIPE_FAVORITE_ICON_TEST_TAG = "recipeFavoriteIcon"
      const val RECIPE_DOWNLOAD_ICON_TEST_TAG = "recipeDownloadIcon"
      const val RECIPE_DELETE_ICON_TEST_TAG = "recipeDeleteIcon"
      const val CONFIRMATION_POP_UP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object SignInScreen {
      const val TACO = "taco"
      const val SUSHI = "sushi"
      const val AVOCADO = "avocado"
...
      const val INSTRUCTION_TIME = "InstructionTime"
      const val EDIT_INSTRUCTION_ICON = "EditInstructionIcon"
      const val INSTRUCTION_TEXT = "InstructionsText"
      const val RECIPE_NAME_TEXT = "RecipeNameText"
      const val INSTRUCTION_LIST = "InstructionList"
      const val INSTRUCTION_LIST_ITEM = "InstructionListItem"
      const val NEXT_STEP_BUTTON = "NextStepButton"
      const val RECIPE_LIST_INSTRUCTIONS_SCREEN_SPACER1 = "RecipeListInstructionsScreenSpacer1"
      const val RECIPE_LIST_ITEM_THUMBNAIL = "InstructionThumbnail"
      const val RECIPE_LIST_INSTRUCTION_ICON = "InstructionIcon"
      const val ADD_INSTRUCTION_BUTTON = "AddInstructionButton"
      const val ADD_ICON_DESCRIPTION = "Add"
      const val EDIT_ICON_DESCRIPTION = "Edit"
...
    object ChefImage {
      const val CHEF_IMAGE = "Chef Image"
    }

    object IngredientSearchScreen {
      const val DRAGGABLE_ITEM = "DraggableItem"
      const val SCANNER_ICON = "scannerIcon"
      const val CONFIRMATION_POPUP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object IngredientListScreen {
      const val RECIPE_NAME = "recipeName"
...
      const val INSTRUCTION_ERROR = "InstructionError"
      const val DELETE_BUTTON = "DeleteButton"
    }

    object Category {
      const val DROPDOWN_CORNER_RADIUS = 8
      const val BUTTON_TEST_TAG = "NextStepButton"

      // Category
      const val CATEGORY_SUBTITLE = "CategorySubtitle"
      const val CATEGORY_DROPDOWN = "CategoryDropdown"

      // Difficulty
      const val DIFFICULTY_SUBTITLE = "DifficultySubtitle"
      const val DIFFICULTY_DROPDOWN = "DifficultyDropdown"
    }

    object TimePicker {
      const val TIME_PICKER_TITLE = "TimePickerTitle"
      const val TIME_PICKER_DESCRIPTION = "TimePickerDescription"
      const val HOUR_PICKER = "HourPicker"
...
