...
    <string name="pop_up_confirm_removal_liked_recipe">Yes</string>>
    <string name="pop_up_confirm_cancel_removal_liked_recipe">No</string>

    //CategoryScreen
    <string name="optional_information">Optional Information</string>
    <string name="select_information_description_optional">Giving this information is optional, but it can make it easier for others to find your recipe.</string>
    <string name="select_category">Select a Category</string>
    <string name="select_difficulty">Select a Difficulty</string>
    <string name="no_category">No category</string>
    <string name="no_difficulty">No difficulty</string>


    //AddInstructionStepScreen
...
